--- a/vue-oa-multiple/package.json
+++ b/vue-oa-multiple/package.json
@@ -13,6 +13,7 @@
     "compression-webpack-plugin": "^2.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1"
   },
@@ -27,6 +28,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "style-resources-loader": "^1.2.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
