--- a/springboot-server-todo/src/main/resources/application.properties
+++ b/springboot-server-todo/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # MyBatis 配置
-spring.datasource.url=jdbc:mysql://192.168.1.90:3306/jz_authcenter?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ding?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=1qaz@WSX
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=1234qwer
+#连接驱动
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=com.hello.springboot.mapper
 
 # 端口
