--- a/springboot-server-todo/src/main/resources/application.properties
+++ b/springboot-server-todo/src/main/resources/application.properties
@@ -4,13 +4,22 @@
 #spring.datasource.password=1234qwer
 ##连接驱动
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-mybatis.type-aliases-package=com.hello.springboot.mapper
 
-# 开发局域网90服务器
-spring.datasource.url=jdbc:mysql://localhost:3306/jz_authcenter?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+## 开发环境90服务器
+#spring.datasource.url=jdbc:mysql://localhost:3306/jz_authcenter?characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+#spring.datasource.username=root
+#spring.datasource.password=1qaz@WSX
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Online 配置
+spring.datasource.url=jdbc:mysql://192.168.112.62:3306/jz_authcenter?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1qaz@WSX
+#连接驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+mybatis.type-aliases-package=com.hello.springboot.mapper
 
 # 端口
 server.port=3000
