--- a/vue-oa-multiple/package.json
+++ b/vue-oa-multiple/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "compression-webpack-plugin": "^2.0.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-skeleton-webpack-plugin": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
