--- a/vue-oa-multiple/package.json
+++ b/vue-oa-multiple/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-oa-multiple",
-  "version": "0.1.1-pub-sub",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 8080",
